8257620: Do not use objc_msgSend_stret to get macOS version

Backport-of: d4c7db5060978302382549246f9ad6831f19377d